--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "",
   "dependencies": {
-    "bower": "^1.8.2"
+    "bower": "^1.8.2",
+    "progress": "^2.0.0"
   },
   "devDependencies": {
     "semver": "^5.4.1"
